--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
+
+        <!--在表单中通过 GET 方法提交两个参数-->
+<!--
 <html>
 <body>
 <form action="http://127.0.0.27:27021/process_get" method="GET">
+    First Name: <input type="text" name="first_name">  <br>
+
+    Last Name: <input type="text" name="last_name">
+    <input type="submit" value="Submit">
+</form>
+</body>
+</html>
+-->
+        <!--在表单中通过 POST 方法提交两个参数-->
+<html>
+<body>
+<form action="http://127.0.0.27:27021/process_post" method="POST">
     First Name: <input type="text" name="first_name">  <br>
 
     Last Name: <input type="text" name="last_name">
