--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 <body>
 <ul>
-    <li><a href="http://localhost:27017/picture_get_all">查看所有</a></li>
+    <li><a href="http://localhost:27017/manager.html">查看所有</a></li>
     <li><a href="">增</a></li>
     <li><a href="">删</a></li>
     <li><a href="">改</a></li>
