ajax加载分类图片 初步拆分db操作

--- a/manager.html
+++ b/manager.html
@@ -23,3 +23,7 @@
 </ul>
 </body>
 </html>
+
+<div class="showbox">
+    <div class="showitem">        <div class="showimg">            <img src="" alt="">        </div>        <div class="showother">            <span class="showname"></span>            <form action="/image_del" method="post" class="delform">                <input type="hidden" value="" name="id">                <input type="submit" value="delete">            </form>        </div>    </div>
+</div>
