--- a/hello.html
+++ b/hello.html
@@ -75,9 +75,37 @@
             </div>
         </div>
     </div>
-    <div ng-app="">
-        <p>我的第一个表达式: {{ 5 + 5 }}</p>
+    <button class="myappbtn">click</button>
+    <div ng-app="myApp" ng-controller="customersCtrl">
+
+        <ul>
+            <li ng-repeat="p in picture">
+                {{  p.message+ ', ' + p.name }}
+            </li>
+        </ul>
+
     </div>
+
+    <script>
+        /*angular.module('myApp', []).controller('customersCtrl', function($scope) {
+            $.ajax({
+                url: "http://localhost:27017/showAllpicture",
+                async: false,
+                data: {},
+                success: function (result) {
+                    $scope.picture = result;
+                }
+            });
+        });*/
+        angular.module('myApp', []).controller('customersCtrl', function($scope, $http) {
+            $http.get("http://localhost:27017/showAllpicture")
+                    .success(function(response) {
+                        $scope.picture = response.result;
+                    });
+        });
+
+
+    </script>
 </div>
 </body>
 </html>
