--- a/manager.html
+++ b/manager.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/tanchuceng.css">
     <script src="/javascripts/jquery-2.2.1.js"></script>
-    <script src="/javascripts/angular-1.5.2.js"></script>
+    <!--<script src="/javascripts/angular-1.5.2.js"></script>-->
+    <!--<script src="/javascripts/angular-1.5.3.js"></script>-->
     <script></script>
 </head>
 <body>
@@ -36,51 +37,39 @@
                 <input type="submit" value="upload photo" class="uploadbtn">
             </form>
         </div>
-        <div class="showpicture btcf">
-            <div class="showitem btcf">
-                <div class="showimg">
-                    <img src="images/image-1458618685880-16. 迈克尔 卡里克（卡域克）.jpg" alt="16. 迈克尔 卡里克（卡域克）.jpg">
-                </div>
-                <div class="showother">
-                    <button class="showbtn">···</button>
-                    <div class="shownamediv">
-                        <span class="showname">16. 迈克尔 卡里克（卡域克）.jpg</span>
-                    </div>
-                    <div class="btndiv">
-                        <button class="editbtn">update</button>
-                        <form action="/image_del" method="post" class="delform">
-                            <input type="hidden" value="56f0c13dbd87fab803c27cde" name="id">
-                            <button type="submit" value="delete">delete</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="showitem btcf">
-                <div class="showimg">
-                    <img src="images/image-1458618705326-路飞.jpg" alt="路飞.jpg">
-                </div>
-                <div class="showother">
-                    <button class="showbtn">···</button>
-                    <div class="shownamediv">
-                        <span class="showname">路飞.jpg</span>
-                    </div>
-                    <div class="btndiv">
-                        <button class="editbtn">update</button>
-                        <form action="/image_del" method="post" class="delform">
-                            <input type="hidden" value="56f0c151bd87fab803c27cdf" name="id">
-                            <button type="submit" value="delete">delete</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
+        <div class="showpicture">
+
         </div>
     </div>
-    <div ng-app="">
-        <p>我的第一个表达式: {{ 5 + 5 }}</p>
-    </div>
+
 </div>
 </body>
 </html>
+<script>
+    function allowDrop(ev)
+    {
+        ev.preventDefault();
+    }
+
+    function drag(ev)
+    {
+        var thispic = $('.showitem:hover');
+        ev.dataTransfer.setData("pictureid",thispic.attr("data-id"));
+    }
+
+    function drop(ev)
+    {
+        ev.preventDefault();
+        var classid = $(event.target).attr("data-c");
+        var pictureid=ev.dataTransfer.getData("pictureid");
+
+        /*console.log(classid);
+        console.log(pictureid);*/
+        pictureUpd(pictureid,classid)
+        //ev.target.appendChild(document.getElementById(data));
+    }
+</script>
 <script src="/javascripts/tanchuceng.js"></script>
+<script src="/javascripts/picturefun.js"></script>
 <script src="/javascripts/classfun.js"></script>
 <script src="/javascripts/pageinit.js"></script>
