滤镜效果完成 待完成 保存图片到后台

--- a/manager.html
+++ b/manager.html
@@ -109,7 +109,11 @@
     }
 
 </script>
+
 <script src="/javascripts/tanchuceng.js"></script>
 <script src="/javascripts/picturefun.js"></script>
 <script src="/javascripts/classfun.js"></script>
 <script src="/javascripts/pageinit.js"></script>
+<script src="/javascripts/StackBlur.js"></script>
+<script src="/javascripts/canvas2image.js"></script>
+<script src="/javascripts/picturefilterfun.js"></script>
