修改分类滚动事件完成

--- a/manager.html
+++ b/manager.html
@@ -14,8 +14,8 @@
 <body class="unselectable">
 <div class="all">
     <header class="sitetitle"><a href="http://localhost:27017/manager.html"><span>myphoto</span></a></header>
-    <div class="left">
-        <div class="creclass">
+    <div class="left"  >
+        <div class="creclass" draggable="false">
             <button class="newclassbtn abscenter">new class</button>
             <div class="hidnewclass abscenter">
                 <input type="text" required class="creclassname">
@@ -24,10 +24,11 @@
             </div>
         </div>
         <div class="showclass">
-            <ul class="classlist">
-                <li data-c="" class="classitem this">全部</li>
+            <ul class="classlist" >
+                <li data-c="" class="classitem this">所有图片</li>
             </ul>
         </div>
+        <!--<div class='classTop' ondragover='classdragover(event)' ondragenter='classTop(event)' ondragleave='classDragLeave(event)'>↑</div>-->
     </div>
     <div class="right">
         <div class="crepicture">
@@ -60,11 +61,77 @@
 </body>
 </html>
 <script>
+    var timer = null;
+    var classbtntimer = null;
+    function classTop(ev) {
+        if (timer) {
+            clearTimeout(timer);
+        }
+        var topEnd = $(".classlist>li:first-child").offset().top - $(window).height()+300;
+        for(var i=0; i<10000; i++) {
+            var h = $("body").scrollTop()-150*i
+            if(h>topEnd){
+                console.log("top");
+                $("html,body").animate({scrollTop: h}, 500, 'swing');
 
+            }
+        }
+    }
+    function classBottom(ev) {
+        if (timer) {
+            clearTimeout(timer);
+        }
+        var bottomEnd = $(".classlist>li:last-child").offset().top - $(window).height()+300;
+        for(var i=0; i<10000; i++) {
+            var h = $("body").scrollTop()+150*i
+            if(h<bottomEnd){
+                console.log("bottom");
+                $("html,body").animate({scrollTop: h}, 500, 'swing');
 
+            }
+        }
+    }
+    function classdragover(ev){
+        if (timer) {
+            clearTimeout(timer);
+        }
+    }
+    function classDragLeave(ev){
+        $("html,body").stop(true);
+        timer = setTimeout(function () {
+            if($(".classTop").length>0&&$(".classBottom").length>0) {
+                //scrollHanlder.enableScroll();//恢复滚动
+                $(".classBottom").remove();
+                $(".classTop").remove();
+            }
+        }, 1000);
+    }
+    /*function classmove(){
+        console.log("123");
+        $("html,body").stop(true,true).animate({scrollTop: $("body").scrollTop()+15}, 100, 'swing',classmove);
+    }*/
 
     function pictureallowDrop(ev) {
         ev.preventDefault();
+        if (timer) {
+            clearTimeout(timer);
+        }
+    }
+    function pictureonDragEnter(ev) {
+        if($(".classTop").length==0&&$(".clssBottom").length==0){
+            //scrollHanlder.disableScroll();//禁用滚动
+            $('.left').append("<div class='classTop' ondragover='classdragover(event)' ondragenter='classTop(event)' ondragleave='classDragLeave(event)'>↑</div>" +
+                    "<div class='classBottom' ondragover='classdragover(event)' ondragenter ='classBottom(event)' ondragleave='classDragLeave(event)'>↓</div>");
+        }
+    }
+    function pictureDragLeave(ev) {
+        timer = setTimeout(function () {
+            if($(".classTop").length>0&&$(".classBottom").length>0) {
+                //scrollHanlder.enableScroll();//恢复滚动
+                $(".classBottom").remove();
+                $(".classTop").remove();
+            }
+        }, 1000);
     }
 
     function picturedrag(ev) {
@@ -72,8 +139,13 @@
         ev.dataTransfer.setData("pictureid", thispic.attr("data-id"));
     }
 
+
     function picturedrop(ev) {
         ev.preventDefault();
+        if($(".classTop").length>0&&$(".classBottom").length>0) {
+            $(".classBottom").remove();
+            $(".classTop").remove();
+        }
         if ($(event.target).attr("class") === $('.this').attr("class")) {
 
         } else {
@@ -112,7 +184,7 @@
     }
 
 </script>
-
+<script src="/javascripts/scrollHanlder.js"></script>
 <script src="/javascripts/tanchuceng.js"></script>
 <script src="/javascripts/picturefun.js"></script>
 <script src="/javascripts/classfun.js"></script>
