瀑布流前端效果完成

--- a/manager.html
+++ b/manager.html
@@ -192,3 +192,4 @@
 <script src="/javascripts/StackBlur.js"></script>
 <script src="/javascripts/canvas2image.js"></script>
 <script src="/javascripts/picturefilterfun.js"></script>
+<script src="/javascripts/waterfall.js"></script>
