增加图片修改分类的新方法

--- a/manager.html
+++ b/manager.html
@@ -42,7 +42,7 @@
         </div>
         <div class="showclass">
             <ul class="classlist">
-                <li data-c="" class="classitem this">所有图片</li>
+                <li class="classitem this">所有图片</li>
             </ul>
         </div>
 
