顺时针 逆时针 done

--- a/manager.html
+++ b/manager.html
@@ -19,7 +19,7 @@
                   id="frmUploadFile">
                 <input type="hidden" value="" name="class_id">
 
-                <input type='text' name='textfield' id='textfield' class='txt'/>
+                <input type='text' name='textfield' id='textfield' class='txt' readonly='true'/>
                 <label class="cpicturebtn " for="xFile"><i class="iconfont">&#xe739;</i></label>
                 <input type="file" id="xFile" class="form-control" name="image"
                        style="position:absolute;clip: rect(0, 0, 0, 0);" accept="image/*"
